--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.3.2
 requests==2.31.0
-Pillow==11.0.0  # or the latest version if you're using image processing
-numpy==1.25.0  # if using for image or data processing
-torch==1.13.1
-torchvision<=0.14.1
+Pillow==11.0.0
+numpy==1.25.0
+torch==2.0.0
+torchvision==0.15.1
