--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 Flask==2.3.2
-requests==2.31.0
-Pillow==11.0.0
-numpy==1.25.0
 torch==2.0.0
 torchvision==0.15.1
+Pillow==11.0.0
+requests==2.31.0
+numpy==1.25.0
+cmake==3.30.5
+sympy==1.13.3
+networkx==3.4.2
+# Add other packages as needed
