--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ requests==2.31.0
 Pillow==11.0.0
 numpy==1.25.0
 torch==2.0.0
-torchvision==0.15.1  # Added to match the torch version
+torchvision==0.15.1  # Version compatible with torch 2.0.0
 sympy==1.13.3
 networkx==3.4.2
-cmake==3.30.5  # Included if needed for compatibility with certain libraries
+cmake==3.30.5  # Optional, if required by any dependency
